[gd_scene load_steps=7 format=3 uid="uid://d1ess2s6s6qw0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_a0ov7"]
[ext_resource type="FontFile" uid="uid://bu3v0mruiiec7" path="res://assets/fonts/PixelOperator/PixelOperator8-Bold.ttf" id="2_0tvmb"]
[ext_resource type="Texture2D" uid="uid://c0e5ujhyph8ah" path="res://assets/play_btn_640_360.png" id="3_0j4pj"]
[ext_resource type="Texture2D" uid="uid://ba6bjtxso8myd" path="res://assets/options_btn_640_360.png" id="4_xrgab"]
[ext_resource type="Texture2D" uid="uid://c2m177eb7ephb" path="res://assets/exit_btn_640_360.png" id="5_aavmp"]

[sub_resource type="LabelSettings" id="LabelSettings_pmsv1"]
font = ExtResource("2_0tvmb")
font_size = 32
font_color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0ov7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.479245, 0.592416, 0.369212, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
text = "Wingless"
label_settings = SubResource("LabelSettings_pmsv1")

[node name="TextureButtonPlay" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_0j4pj")
stretch_mode = 3

[node name="TextureButtonOptions" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_xrgab")
stretch_mode = 3

[node name="TextureButtonExit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_aavmp")
stretch_mode = 3
